apps/base/openwebui/openwebui.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openwebui-system
  labels:
    networking.tinyrack.net/isolation: enabled
