apps/base/openwebui/openwebui.playwright.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui-playwright
  namespace: openwebui-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: openwebui-playwright
  ports:
    - name: ws
      port: 3000
      targetPort: ws
      protocol: TCP
